# harvest

./: .gitignore  .ruff.toml  404.html  ABOUT.md  BackTester.json  BaseAlgo.json  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  LiveTrader.json  MANIFEST.in  Makefile  README.md  ROADMAP.md  data.json  docs.html  documentation.md  index.html  parser.py  pytest.ini  setup.cfg  setup.py  test_interval_conversion.py  test_interval_enum_usage.py  test_mock_broker.py  test_mock_broker_performance.py  test_updated_alignment.py  test_utc_operations.py  tutorial.html
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature-request.md
.github/etc/: parser.py
.github/workflows/: build-website.yml  deploy.yml  parse_docstring.yml  python-package.yml  run-tests.yml
.trunk/: trunk.yaml
components/: code.html  footer.html  func.html  header.html  navbar.html  static_image.html
doc/: Intro.md  Robinhood.md  dev.md
docs/: Intro.md  Roadmap.md  api-docs.md  create-api.md  dev.md  harvest_postgresql_tutorial.md
etc/: dummy_account.yaml  dummy_account_copy.yaml  parser.py
examples/: backtest.py  crossover.py  crypto.py  em_alpaca.py  em_kraken.py  em_polygon.py  extensive_monitoring.py  monitor.py  multi_broker_example.py  multi_storage_example.py  options.py  orchestrator_example.py  service_based_example.py  simulation.py  storage.py  test-backtest.py  test-live.py
gui/: package.json  rollup.config.js
gui/harvest-frontend/: README.md  package-lock.json  package.json
gui/src/: App.svelte
harvest/: __init__.py  __main__.py  algo.py  algorithm.py  cli.py  client.py  definitions.py  enum.py  load.py  orchestrator.py  queue.py  server.py  utils.py  wizard.py
harvest/api/: _base.py  alpaca.py  dummy.py  kraken.py  paper.py  polygon.py  robinhood.py  webull.py  webullapi.py  yahoo.py
harvest/broker/: __init__.py  _base.py  alpaca.py  dummy.py  kraken.py  mock.py  paper.py  polygon.py  robinhood.py  webull.py  yahoo.py
harvest/events/: __init__.py  event_bus.py  events.py
harvest/gui/: global.css  index.html
harvest/plugin/: __init__.py  _base.py  dolt_options_plugin.py  yahoo.py
harvest/services/: __init__.py  algorithm_service.py  (+6 more)
test/: test_algo.py  test_csv_storage.py  test_db_storage.py  test_dummy_broker.py  test_dummy_streamer.py  test_paper_broker.py  test_pickle_storage.py  test_polygon_streamer.py  test_queue.py  test_rh_broker.py  test_storage.py  test_tester.py  test_trader.py  test_yahoo_streamer.py
tests/: test_algo.py  test_alpaca.py  test_api.py  test_api_dummy.py  test_api_paper.py  test_api_polygon.py  test_api_webull.py  test_api_yahoo.py  test_base_streamer copy.py  test_cli.py  test_csv_storage.py  test_dummy_streamer.py  test_paper_broker.py  test_pickle_storage.py  test_plugin.py  test_polygon_streamer.py  test_storage.py  test_storage_csv.py  test_storage_db.py  test_storage_pickle.py  test_tester.py  test_trader.py  test_utils.py  test_webull.py  test_wizard.py  test_yahoo_streamer.py
tools/: trunk
tutorial/: starter.html
website/: .gitignore  next.config.js  package-lock.json  package.json
(+258 files in other folders)
