[metadata]
name = harvest_python
version = 0.4.0
author = Harvest Team
description = Simple and intuitive python framework for algorithmic trading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tfukaza/harvest/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas == 1.3.5
    finta >= 1.3
    pyyaml
    tqdm
    tzlocal >=3.0
    tzdata
    yfinance
    SQLAlchemy
    flask-login
    flask-cors
    flask
    rich

[options.extras_require]
    Alpaca =
        alpaca-trade-api
    Robinhood =
        pyotp
        robin_stocks
    Webull =
        webull
    Kraken =
        krakenex
    Dev =
        coverage

[options.entry_points]
console_scripts =
    harvest = harvest.cli:main

[coverage:run]
source = harvest/
