[metadata]
name = harvest_python
version = 0.4.0
author = Harvest Team
description = Simple and intuitive python framework for algorithmic trading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tfukaza/harvest/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas == 2.2.2
    finta == 1.3
    pyyaml == 5.3
    tqdm == 4.66.4
    tzlocal == 5.2
    tzdata == 2024.1
    yfinance == 0.2.38
    SQLAlchemy == 2.0.0
    flask-login == 0.6.3
    flask-cors == 3.0.10
    flask == 3.0.3
    rich == 13.7.1

[options.extras_require]
    Alpaca =
        alpaca-trade-api
    Robinhood =
        pyotp
        robin_stocks
    Webull =
        webull
    Kraken =
        krakenex
    Dev =
        coverage

[options.entry_points]
console_scripts =
    harvest = harvest.cli:main

[coverage:run]
source = harvest/
