[metadata]
name = harvest_python
version = 0.4.0
author = Harvest Team
description = Simple and intuitive python framework for algorithmic trading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tfukaza/harvest/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pandas >= 2.0.0
    finta >= 1.0
    pyyaml >= 5.0
    tqdm >= 4.0.0
    tzlocal >= 5.0
    tzdata >= 2020.1
    rich >= 13.0.0
    SQLAlchemy >= 2.0.0
    requests

[options.extras_require]
Alpaca =
    alpaca-trade-api
Robinhood =
    pyotp
    robin_stocks
Webull =
    webull
Kraken =
    krakenex
Yahoo =
    yfinance >= 0.2.38
Server =
    flask
    flask-login
    flask-cors
Dev =
    coverage

[options.entry_points]
console_scripts =
    harvest = harvest.cli:main

[coverage:run]
source = harvest/
